--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,6 @@
         "symfony/framework-bundle": "5.2.*",
         "symfony/yaml": "5.2.*"
     },
-    "require-dev": {
-    },
     "config": {
         "optimize-autoloader": true,
         "preferred-install": {
@@ -57,5 +55,8 @@
             "allow-contrib": false,
             "require": "5.2.*"
         }
+    },
+    "require-dev": {
+        "symfony/maker-bundle": "^1.25"
     }
 }
