--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=215cdcb91cd6649398c30de2fc48bb44
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=65bad2f3f5ad38c9f87a02c1f10b4255
+JWT_PASSPHRASE=test
 ###< lexik/jwt-authentication-bundle ###
 
 ###> doctrine/doctrine-bundle ###
