--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,15 @@
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
         "lexik/jwt-authentication-bundle": "^2.10",
+        "phpdocumentor/reflection-docblock": "^5.2",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
+        "symfony/property-access": "5.2.*",
+        "symfony/property-info": "5.2.*",
         "symfony/proxy-manager-bridge": "5.2.*",
+        "symfony/serializer": "5.2.*",
         "symfony/yaml": "5.2.*"
     },
     "config": {
@@ -64,6 +68,7 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "symfony/maker-bundle": "^1.25"
     }
 }
